# code-analyzer

./: Cargo.toml  LICENSE  NOTICE  README.md  SKILL.md  mise.toml
.github/workflows/: ci.yml  release.yml
src/: lang.rs  lib.rs  main.rs
src/analyze/: cache.rs  formatter.rs  graph.rs  mod.rs  parser.rs  traversal.rs  types.rs
src/analyze/languages/: go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs
tests/: integration.rs
tests/fixtures/: sample.go  sample.js  sample.py  sample.rs
