[package]
name = "code-analyze"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Analyze code structure and relationships using tree-sitter"

[[bin]]
name = "analyze"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-ruby = "0.23"
rayon = "1.10"
ignore = "0.4.25"
lru = "0.16"
serde = { version = "1", features = ["derive"] }
